# ouw_in_microservice

./: .env.example  .pre-commit-config.yaml  Dockerfile.postgres  docker-compose.yaml  pyproject.toml
app/core/: settings.py
app/services/order_service/: comannd.md  fs_app.py
app/services/user_service/: alembic.ini  main.py
app/services/user_service/alembic/: env.py
app/services/user_service/alembic/versions/: 2025_09_09_1341-90ae1880f72e_creating_tables.py  2025_09_09_1355-72d4be5d20c5_add_daily_limit_reset_function.py
app/services/user_service/api/v1/: auth.py  decorator_exception.py  routes.py
app/services/user_service/domain/: commands.py  entities.py  exceptions.py  ports.py  use_cases.py
app/services/user_service/infrastructure/: providers.py
app/services/user_service/infrastructure/brokers/: rabbit.py
app/services/user_service/infrastructure/db/: providers.py  repositories.py  uow.py
app/services/user_service/infrastructure/db/models/: __init__.py  api_key_for_user.py  base.py  mixins.py  product.py  user.py
app/services/user_service/infrastructure/ioc/: containers.py
app/services/user_service/infrastructure/ioc/providers/: __init__.py  rabbit_broker.py  sqlalchemy_provider.py  user_service_provider.py
app/services/user_service/infrastructure/messaging/: events.py  providers.py
app/services/user_service/schemas/: __init__.py  user_schemas.py  utils.py
